# multimedia-player

./: .gitignore  CMakeLists.txt  L7Player.code-workspace  README.md
external_dependencies/glad/include/glad/: glad.h
external_dependencies/glad/src/: glad.c
external_dependencies/glfw/lib/: glfw3.lib  glfw3dll.exp
external_dependencies/sdl/cmake/: SDL2Targets.cmake  SDL2mainTargets.cmake  SDL2staticTargets.cmake
external_dependencies/sdl/lib/: SDL2.lib  SDL2main.lib
inc/: glog_proxy.h
multimedia/: CMakeLists.txt
multimedia/include/: audio_frame_buffer.h  av_dictionary.hpp  clock.h  core_common.h  core_decoder.h  core_decoder_audio.h  core_decoder_video.h  core_frame_queue.h  core_media.h  core_media_status.h  core_packet_queue.h  core_thread.h  core_thread_audio.h  core_thread_demux.h  core_thread_video.h  sdl_proxy.h  seek.h  spin_mutex.h  swr_context_proxy.h  swresample_proxy.h  swscale_proxy.h
multimedia/main/: CMakeLists.txt  media.cpp  version_info.rc.in
multimedia/src/: CMakeLists.txt  core_common.cpp  core_decoder.cpp  core_decoder_audio.cpp  core_decoder_video.cpp  core_frame_queue.cpp  core_media.cpp  core_media_status.cpp  core_packet_queue.cpp  core_thread.cpp  core_thread_audio.cpp  core_thread_demux.cpp  core_thread_video.cpp  sdl_proxy.cpp  swr_context_proxy.cpp  swresample_proxy.cpp  swscale_proxy.cpp
multimedia/test/: CMakeLists.txt  multimedia_player_test.cpp  version_info.rc.in
